# uav_trajectory_generator

./: CMakeLists.txt  README.md  package.xml  uav_trajectory_generator.repos
config/: default.rviz  default.yaml
include/trajectory_generator/: TrajectoryGenerator.hpp
include/trajectory_generator/trajectories/: Circle.hpp  Line.hpp  Trajectory.hpp
include/trajectory_generator_ros2/: TrajectoryGenerator.hpp
include/trajectory_generator_ros2/trajectories/: Boomerang.hpp  Bounce.hpp  Circle.hpp  Figure8.hpp  I.hpp  Line.hpp  M.hpp  Reciprocating.hpp  Rectangle.hpp  Square.hpp  T.hpp  Trajectory.hpp  Trefoil.hpp
launch/: base_station.launch  base_station.launch.py  onboard.launch  onboard.launch.py
src/: TrajectoryGenerator.cpp  trajectory_generator_node.cpp
src/trajectories/: Boomerang.cpp  Bounce.cpp  Circle.cpp  Figure8.cpp  I.cpp  Line.cpp  M.cpp  Reciprocating.cpp  Rectangle.cpp  Square.cpp  T.cpp  Trefoil.cpp
